# engram

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  config.md  data.md  mcp-tools.md  sync.md
src/engram/: __init__.py  cli.py  config.py  doctor.py  evals.py  importer.py  interfaces.py  llm.py  memory_audit.py  models.py  observer.py  operations.py  provenance.py  retriever.py  server.py  store.py  structured_outputs.py  sync.py  synthesizer.py
src/engram/core/: __init__.py  config.py  interfaces.py  models.py  provenance.py  structured_outputs.py
src/engram/dashboard/: __init__.py  app.py  constants.py  data.py  tables.py
src/engram/dashboard/screens/: candidates.py  category.py  facts.py  forgotten.py  help.py  overview.py  projects.py  timeline.py
src/engram/dashboard/styles/: dashboard.tcss
src/engram/dashboard/widgets/: fact_detail.py  stat_card.py
src/engram/extraction/: __init__.py  importer.py  observer.py
src/engram/llm/: __init__.py  client.py
src/engram/maintenance/: __init__.py  doctor.py  memory_audit.py  synthesizer.py
src/engram/recall/: __init__.py  evals.py  retriever.py
src/engram/storage/: __init__.py  store.py  sync.py
tests/: bench_tiers.py  conftest.py  cross_project_recall_eval_dataset.json  memory_audit_eval_dataset.json  recall_eval_dataset.json  run_cross_project_recall_evals.py  run_evals.py  run_memory_audit_evals.py  test_cli.py  test_cli_parity.py  test_config.py  test_cross_project_recall_evals.py  test_dashboard.py  test_doctor.py  test_evals.py  test_event_log.py  test_hardening.py  test_interfaces.py  test_llm.py  test_maintenance.py  test_memory_audit.py  test_memory_audit_evals.py  test_models.py  test_observer.py  test_operations.py  test_provenance.py  test_recall_evals.py  test_retriever.py  test_safety.py  test_server_recall.py  test_store.py  test_sync.py  test_synthesizer.py
