[project]
name = "engram"
version = "0.1.0"
description = "Engram — structured, cross-project memory for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0.0",
    "textual>=1.0.0",
    "textual-plotext>=1.0.0",
    "plotext>=5.3.0",
]

[project.scripts]
engram = "engram.cli:main_dispatch"
engram-dash = "engram.dashboard.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
