[project]
name = "engram"
version = "0.1.0"
description = "Engram — structured, cross-project memory for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0.0",
    "textual>=1.0.0",
    "textual-plotext>=1.0.0",
]

[project.scripts]
engram = "engram.cli:main_dispatch"
engram-dash = "engram.dashboard.app:main"

[project.optional-dependencies]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
files = ["src/engram"]
check_untyped_defs = true
implicit_optional = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
